Fix spacing issue

--- a/src/sass/pre-need.scss
+++ b/src/sass/pre-need.scss
@@ -13,6 +13,9 @@
       margin-top: 0;
     }
   }
+  .form-expanding-group {
+    margin-bottom: 1em;
+  }
 }
 
 .usa-alert {
